--- a/docs.html
+++ b/docs.html
@@ -17,6 +17,8 @@
         <header>
             <a href="./index.html">Home</a>
             <a href="./docs.html">Docs</a>
+            <a href="https://github.com/CuteBladeYT/html-wallpaper-universal">Github</a>
+            <a href="https://github.com/CuteBladeYT/html-wallpaper-universal/releases">Releases</a>
 
             <img src="./imgs/favicon.png">
         </header>
@@ -85,7 +87,7 @@
             <div id="docs__installing_modules">
                 <h2 class="c_left">Installing Modules</h2>
                 <p class="c_left white">
-                    1. Download module from <a class="linkblue" href="https://github.com/CuteBladeYT/html-wallpaper-universal/discussions/1" target="_blank">GitHub</a>.<br>
+                    1. Download module from <a class="linkblue" href="https://github.com/CuteBladeYT/html-wallpaper-universal/discussions/1" target="_blank">Github</a>.<br>
                     2. Unpack it.
                     3. Copy the folder to <code>modules</code> folder where <b>HTML Wallpaper</b> is located.<br>
                     4. Open <code>settings.js</code> in parent folder with any code / text editor.<br>
