--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <header>
             <a href="./index.html">Home</a>
             <a href="./docs.html">Docs</a>
+            <a href="https://github.com/CuteBladeYT/html-wallpaper-universal">Github</a>
+            <a href="https://github.com/CuteBladeYT/html-wallpaper-universal/releases">Releases</a>
 
             <img src="./imgs/favicon.png">
         </header>
